--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
          <div class="imageicons">
             <img src="C:\Users\Ankit\Desktop\Portfolio\Portfolio\dot_net.png" alt="c#" />
-            <img src="C:\Users\Ankit\Desktop\Portfolio\Portfolio\c_sharp.png" alt=".net" />
+            <img src="https://github.com/ankitvip/Portfolio/blob/main/Portfolio/c_sharp.png?raw=true" alt=".net" />
             <img src="C:\Users\Ankit\Desktop\Portfolio\Portfolio\sql-server.png" alt="SQL"/>
       </div> 
 
