--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             </div>
           </div>
           <div class="col-md-3 col-sm-3" id="me">
-            <img src="C:\Users\Ankit\Desktop\Portfolio\img\ankit.png" class="responsive" alt="AKNIT_image" />
+            <img src="https://github.com/ankitvip/Portfolio/blob/main/img/ankit.png?raw=true" class="responsive" alt="AKNIT_image" />
           </div>
         </div>
       </div>
@@ -190,9 +190,9 @@
          </div>
 
          <div class="imageicons">
-            <img src="C:\Users\Ankit\Desktop\Portfolio\Portfolio\dot_net.png" alt="c#" />
+            <img src="https://github.com/ankitvip/Portfolio/blob/main/Portfolio/dot_net.png?raw=true" alt="c#" />
             <img src="https://github.com/ankitvip/Portfolio/blob/main/Portfolio/c_sharp.png?raw=true" alt=".net" />
-            <img src="C:\Users\Ankit\Desktop\Portfolio\Portfolio\sql-server.png" alt="SQL"/>
+            <img src="https://github.com/ankitvip/Portfolio/blob/main/Portfolio/sql-server.png?raw=true" alt="SQL"/>
       </div> 
 
  
