--- a/index.html
+++ b/index.html
@@ -257,9 +257,9 @@
       <div class="container" id="contact">
         <h1 class="vline">&nbsp; Get in Touch</h1>
         <p>
-          I'M CURRENTLY FULL-TIME WORK IN SMC INSURANCE 
-          BROKERS PVT LIMITED NOIDA UTTAR Pradesh.
-           <br><a href="https://smcinsurance.com/">SMC INSURANCE</a></p>
+          I'M CURRENTLY FULL-TIME WORK IN SOFTAGE INFORMATION 
+          TECHNOLOGY LIMITED UDYOG VIHAR GURGAON,HARYANA.
+           <br><a href="https://www.softage.net/">Softage</a></p>
         </p>
         <div class="contactlinks" data-aos="flip-up">
           <ul>
