--- a/index.html
+++ b/index.html
@@ -209,11 +209,20 @@
               <a href="#">
                 <div class="card">
                   <div class="card-body">
-                    <h5 class="card-title"> Electronic Voting System</h5>
-                    <p class="card-text">
-                      The project E-Voting System is based on database and object- oriented techniques.
-					  This system would provide ballot displays on a screen instead of paper. 
-					  Voters can easily cast their vote by simply clicking on a button.
+                    <h5 class="card-title">HUM mobile Application API</h5>
+                    <p class="card-text">This project is carefully designed to ﬁt 
+			                 with the rapid technical support for Asp.Net Core,
+			                 C#, MSSQL, Firebase Cloud Messaging (FCM).
+                                         •API documentation and testing(Postman).
+                                         •Used Database first approach with entity 
+			                 framework to generate models and the dB context.
+                                         •Used DB context to access data from the database.
+                                         •Developed scalable modular software Packages for APIs
+                                         •Authentication and authorization methods (JWT Token)
+                                         •Using server SFTP and FTP Upload and download data in wwwroot directory.
+                                         •using method Requests and response Encryption or Decryption in Api's.
+                                         •Implemented Firebase Cloud Messaging (FCM) API for real-time push notifications 
+			                  for a Spring Boot-based mobile application
                     </p>
                   </div>
                 </div>
