--- a/index.html
+++ b/index.html
@@ -210,19 +210,13 @@
                 <div class="card">
                   <div class="card-body">
                     <h5 class="card-title">HUM mobile Application API</h5>
-                    <p class="card-text">This project is carefully designed to ﬁt 
-			                 with the rapid technical support for Asp.Net Core,
-			                 C#, MSSQL, Firebase Cloud Messaging (FCM).
-                                         •API documentation and testing(Postman).
-                                         •Used Database first approach with entity 
-			                 framework to generate models and the dB context.
-                                         •Used DB context to access data from the database.
-                                         •Developed scalable modular software Packages for APIs
-                                         •Authentication and authorization methods (JWT Token)
-                                         •Using server SFTP and FTP Upload and download data in wwwroot directory.
-                                         •using method Requests and response Encryption or Decryption in Api's.
-                                         •Implemented Firebase Cloud Messaging (FCM) API for real-time push notifications 
-			                  for a Spring Boot-based mobile application
+                    <p class="card-text">This project is carefully designed to ﬁt with the rapid technical support for Asp.Net Core,
+			                 C#, MSSQL, Firebase Cloud Messaging (FCM).using API documentation and testing(Postman).
+                                         Used Database first approach with entity framework to generate models and the dB context.
+                                         Used DB context to access data from the database.Developed scalable modular software Packages for APIs
+                                         Authentication and authorization methods (JWT Token).Using server SFTP and FTP Upload and download data in wwwroot directory.
+                                         using method Requests and response Encryption or Decryption in Api's.Implemented Firebase Cloud Messaging (FCM) API for real-time push notifications 
+			                 for a Spring Boot-based mobile application
                     </p>
                   </div>
                 </div>
