--- a/index.html
+++ b/index.html
@@ -222,6 +222,20 @@
                 </div>
               </a>
             </div>
+		  <div class="col-md-4">
+              <a href="#">
+                <div class="card">
+                  <div class="card-body">
+                    <h5 class="card-title">Class sadf Performance Analyzer</h5>
+                    <p class="card-text">
+                         This project tries to bridge this gap between students and teachers by listing out such students on the basis of marks.
+						 Class performance analyzer is carefully designed to fit with the rapid technical support for Front-End Language  HTML,CSS,
+						 JavaScript,Back-End Language:Python, Database used:Sqlite3
+                    </p>
+                  </div>
+                </div>
+              </a>
+            </div>
             <div class="col-md-4">
               <a href="#">
                 <div class="card">
