--- a/index.html
+++ b/index.html
@@ -211,40 +211,46 @@
                   <div class="card-body">
                     <h5 class="card-title">HUM mobile Application API</h5>
                     <p class="card-text">This project is carefully designed to ﬁt with the rapid technical support for Asp.Net Core,
-			                 C#, MSSQL, Firebase Cloud Messaging (FCM).using API documentation and testing(Postman).
-                                         Used Database first approach with entity framework to generate models and the dB context.
-                                         Used DB context to access data from the database.Developed scalable modular software Packages for APIs
-                                         Authentication and authorization methods (JWT Token).Using server SFTP and FTP Upload and download data in wwwroot directory.
-                                         using method Requests and response Encryption or Decryption in Api's.Implemented Firebase Cloud Messaging (FCM) API for real-time push notifications 
-			                 for a Spring Boot-based mobile application
+			                                          C#, MSSQL, Firebase Cloud Messaging (FCM).using API documentation and testing(Postman).
+                                                Used Database first approach with entity framework to generate models and the dB context.
+                                                Used DB context to access data from the database.Developed scalable modular software Packages for APIs
+                                                Authentication and authorization methods (JWT Token).Using server SFTP and FTP Upload and download data in wwwroot directory.
+                                                using method Requests and response Encryption or Decryption in Api's.Implemented Firebase Cloud Messaging (FCM) API for real-time push notifications 
+			                                          for a Spring Boot-based mobile application
                     </p>
                   </div>
                 </div>
               </a>
             </div>
-		  <div class="col-md-4">
+		         <div class="col-md-4">
               <a href="#">
                 <div class="card">
                   <div class="card-body">
-                    <h5 class="card-title">Class sadf Performance Analyzer</h5>
+                    <h5 class="card-title">HDFC TERM LIFE API</h5>
                     <p class="card-text">
-                         This project tries to bridge this gap between students and teachers by listing out such students on the basis of marks.
-						 Class performance analyzer is carefully designed to fit with the rapid technical support for Front-End Language  HTML,CSS,
-						 JavaScript,Back-End Language:Python, Database used:Sqlite3
+                                        Responsibilities: - Developing/integrating API and application for in-house users and clients Technology used: C#, ASP.net Mvc, MSSQL.
+                                        This project is carefully designed to fit with the rapid technical support for Asp.Net Mvc, C#, MSSQL.
+                                        API documentation and testing (Postman).
+                                        Used Database first approach with entity framework 
+			                                  to generate models and the dB context.
+                                        Used DB context to access data from the database.
+                                        Developed scalable modular software Packages for APIs
+                                        Authentication and authorization methods (JWT Token)
+                                        using method Requests and response Encryption or Decryption in Api's
                     </p>
                   </div>
                 </div>
               </a>
-            </div>
+            </div>		  
             <div class="col-md-4">
               <a href="#">
                 <div class="card">
                   <div class="card-body">
                     <h5 class="card-title">Class  Performance Analyzer</h5>
                     <p class="card-text">
-                         This project tries to bridge this gap between students and teachers by listing out such students on the basis of marks.
-						 Class performance analyzer is carefully designed to fit with the rapid technical support for Front-End Language  HTML,CSS,
-						 JavaScript,Back-End Language:Python, Database used:Sqlite3
+                                          This project tries to bridge this gap between students and teachers by listing out such students on the basis of marks.
+						                              Class performance analyzer is carefully designed to fit with the rapid technical support for Front-End Language  HTML,CSS,
+						                              JavaScript,Back-End Language:Python, Database used:Sqlite3
                     </p>
                   </div>
                 </div>
@@ -256,14 +262,22 @@
                   <div class="card-body">
                     <h5 class="card-title">Notepad</h5>
                     <p class="card-text">
-                      Simple text editor for Microsoft Windows.
-					  Basic text-editing program that allows you to create, 
-					  open, and read plain text files. Its based on python and 
-					  i am using module tkinter, os, webbrowser, speech recognition , login as log
+                                        Simple text editor for Microsoft Windows.
+					                              Basic text-editing program that allows you to create, 
+					                              open, and read plain text files. Its based on python and 
+					                              i am using module tkinter, os, webbrowser, speech recognition , login as log
                     </p>
                   </div>
                 </div>
               </a>
+		         <div class="card-body">
+                    <h5 class="card-title"> Electronic Voting System</h5>
+                    <p class="card-text">
+                                        The project E-Voting System is based on database and object- oriented techniques.
+					                              This system would provide ballot displays on a screen instead of paper. 
+					                               Voters can easily cast their vote by simply clicking on a button.
+                    </p>
+                  </div>
             </div>
           </div>
         </div>
