--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                 <div class="card">
                   <div class="card-body">
                     <h5 class="card-title">HUM mobile Application API</h5>
-                    <p class="card-text">This project is carefully designed to ﬁt with the rapid technical support for Asp.Net Core,
+                    <p class="card-text text-justify">This project is carefully designed to ﬁt with the rapid technical support for Asp.Net Core,
 			                                          C#, MSSQL, Firebase Cloud Messaging (FCM).using API documentation and testing(Postman).
                                                 Used Database first approach with entity framework to generate models and the dB context.
                                                 Used DB context to access data from the database.Developed scalable modular software Packages for APIs
@@ -227,7 +227,7 @@
                 <div class="card">
                   <div class="card-body">
                     <h5 class="card-title">HDFC TERM LIFE API</h5>
-                    <p class="card-text">
+                    <p class="card-text text-justify">
                                         Responsibilities: - Developing/integrating API and application for in-house users and clients Technology used: C#, ASP.net Mvc, MSSQL.
                                         This project is carefully designed to fit with the rapid technical support for Asp.Net Mvc, C#, MSSQL.
                                         API documentation and testing (Postman).
@@ -247,7 +247,7 @@
                 <div class="card">
                   <div class="card-body">
                     <h5 class="card-title">Class  Performance Analyzer</h5>
-                    <p class="card-text">
+                    <p class="card-text text-justify">
                                           This project tries to bridge this gap between students and teachers by listing out such students on the basis of marks.
 						                              Class performance analyzer is carefully designed to fit with the rapid technical support for Front-End Language  HTML,CSS,
 						                              JavaScript,Back-End Language:Python, Database used:Sqlite3
@@ -261,7 +261,7 @@
                 <div class="card">
                   <div class="card-body">
                     <h5 class="card-title">Notepad</h5>
-                    <p class="card-text">
+                    <p class="card-text text-justify">
                                         Simple text editor for Microsoft Windows.
 					                              Basic text-editing program that allows you to create, 
 					                              open, and read plain text files. Its based on python and 
@@ -270,17 +270,23 @@
                   </div>
                 </div>
               </a>
-		         <div class="card-body">
+            </div>
+            <div class="col-md-4">
+              <a href="#">
+                <div class="card">
+		              <div class="card-body">
                     <h5 class="card-title"> Electronic Voting System</h5>
-                    <p class="card-text">
+                    <p class="card-text text-justify">
                                         The project E-Voting System is based on database and object- oriented techniques.
 					                              This system would provide ballot displays on a screen instead of paper. 
 					                               Voters can easily cast their vote by simply clicking on a button.
                     </p>
-                  </div>
-            </div>
+                    </div>
+                </div>
+              </a>
           </div>
         </div>
+      </div>
       </div>
     </section>
 
