--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             <div class="col-md-4">
               <a href="#">
                 <div class="card">
-                  <div class="card-body">
+                  <div class="card-body card_width_ad">
                     <h5 class="card-title">HUM mobile Application API</h5>
                     <p class="card-text text-justify">This project is carefully designed to ﬁt with the rapid technical support for Asp.Net Core,
 			                                          C#, MSSQL, Firebase Cloud Messaging (FCM).using API documentation and testing(Postman).
@@ -225,7 +225,7 @@
 		         <div class="col-md-4">
               <a href="#">
                 <div class="card">
-                  <div class="card-body">
+                  <div class="card-body card_width_ad">
                     <h5 class="card-title">HDFC TERM LIFE API</h5>
                     <p class="card-text text-justify">
                                         Responsibilities: - Developing/integrating API and application for in-house users and clients Technology used: C#, ASP.net Mvc, MSSQL.
@@ -245,7 +245,7 @@
             <div class="col-md-4">
               <a href="#">
                 <div class="card">
-                  <div class="card-body">
+                  <div class="card-body card_width_ad">
                     <h5 class="card-title">Class  Performance Analyzer</h5>
                     <p class="card-text text-justify">
                                           This project tries to bridge this gap between students and teachers by listing out such students on the basis of marks.
@@ -259,7 +259,7 @@
             <div class="col-md-4">
               <a href="#">
                 <div class="card">
-                  <div class="card-body">
+                  <div class="card-body card_width_ad">
                     <h5 class="card-title">Notepad</h5>
                     <p class="card-text text-justify">
                                         Simple text editor for Microsoft Windows.
@@ -274,7 +274,7 @@
             <div class="col-md-4">
               <a href="#">
                 <div class="card">
-		              <div class="card-body">
+		              <div class="card-body card_width_ad">
                     <h5 class="card-title"> Electronic Voting System</h5>
                     <p class="card-text text-justify">
                                         The project E-Voting System is based on database and object- oriented techniques.
