--- a/index.html
+++ b/index.html
@@ -105,8 +105,7 @@
               <a
                 href="https://www.linkedin.com/in/ankit-sharma-06427b1a1/"
                 class="btn btn-outline-secondary"
-                >Connect with me on Linkedin</a
-              >
+                >Connect with me on Linkedin</a>
             </div>
           </div>
           <div class="col-md-3 col-sm-3" id="me">
@@ -115,7 +114,6 @@
         </div>
       </div>
     </section>
-
     <section class="">
       <div class="container" id="education" data-aos="fade-down">
         <div class="row">
@@ -173,29 +171,25 @@
         </div>
       </div>
     </section>
-
     <section>
       <div class="container" id="skills" data-aos="fade-up">
         <h1 class="vline">&nbsp; Skills</h1>
         <div class="skills">
-         <div class="imageicons">
-           <img src="img/skills/html.png" alt="html" />
-            <img src="img/skills/css.png" alt="css" />
-            <img src="img/skills/javascript.png" alt="javascript" />
-         </div>
-         <div class="imageicons">
-             <img src="img/skills/c.png" alt="C" />
-			       <img src="img/skills/mysql.png" alt="mysql" />
-			       <img src="https://img.icons8.com/color/48/000000/python--v1.png" alt="Python"/>
-         </div>
-
-         <div class="imageicons">
+	 <div class="imageicons">
             <img src="https://github.com/ankitvip/Portfolio/blob/main/Portfolio/dot_net.png?raw=true" alt="c#" />
             <img src="https://github.com/ankitvip/Portfolio/blob/main/Portfolio/c_sharp.png?raw=true" alt=".net" />
             <img src="https://github.com/ankitvip/Portfolio/blob/main/Portfolio/sql-server.png?raw=true" alt="SQL"/>
-      </div> 
-
- 
+        </div> 	
+	<div class="imageicons">
+           <img src="img/skills/html.png" alt="html" />
+            <img src="img/skills/css.png" alt="css" />
+            <img src="img/skills/javascript.png" alt="javascript" />
+         </div>	
+         <div class="imageicons">
+             <img src="img/skills/c.png" alt="C" />
+	     <img src="img/skills/mysql.png" alt="mysql" />
+	     <img src="https://img.icons8.com/color/48/000000/python--v1.png" alt="Python"/>
+         </div>
         </div>
       </div>
     </section>
