--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
     </section>
 
     <section>
+      
       <div class="container" id="about" data-aos="fade-up">
         <div class="row">
           <div class="col-md-9 col-sm-9">
@@ -113,6 +114,8 @@
           </div>
         </div>
       </div>
+
+
     </section>
     <section class="">
       <div class="container" id="education" data-aos="fade-down">
@@ -171,118 +174,296 @@
         </div>
       </div>
     </section>
-    <section>
-      <div class="container" id="skills" data-aos="fade-up">
-        <h1 class="vline">&nbsp; Skills</h1>
-        <div class="skills">
-	 <div class="imageicons">
-            <img src="https://github.com/ankitvip/Portfolio/blob/main/Portfolio/dot_net.png?raw=true" alt="c#" />
-            <img src="https://github.com/ankitvip/Portfolio/blob/main/Portfolio/c_sharp.png?raw=true" alt=".net" />
-            <img src="https://github.com/ankitvip/Portfolio/blob/main/Portfolio/sql-server.png?raw=true" alt="SQL"/>
-        </div> 	
-	<div class="imageicons">
-           <img src="img/skills/html.png" alt="html" />
-            <img src="img/skills/css.png" alt="css" />
-            <img src="img/skills/javascript.png" alt="javascript" />
-         </div>	
-         <div class="imageicons">
-             <img src="img/skills/c.png" alt="C" />
-	     <img src="img/skills/mysql.png" alt="mysql" />
-	     <img src="https://img.icons8.com/color/48/000000/python--v1.png" alt="Python"/>
-         </div>
+<!-- ==== Skills Section ==== -->
+<section>
+  <div class="container" id="skills" data-aos="fade-up">
+    <h1 class="vline">&nbsp; Skills</h1>
+    <div class="row row-cols-2 row-cols-sm-3 row-cols-md-6 g-4 justify-content-center text-center">
+      <div class="col">
+        <div class="imageicons">
+          <img src="https://github.com/ankitvip/Portfolio/blob/main/Portfolio/dot_net.png?raw=true" alt=".NET" style="width:48px;border:3px solid #FFFFFF; border-radius:12px;">
+          <div>.NET</div>
         </div>
       </div>
-    </section>
+      <div class="col">
+        <div class="imageicons">
+          <img src="https://github.com/ankitvip/Portfolio/blob/main/Portfolio/c_sharp.png?raw=true" alt="C#" style="width:48px;border:3px solid #FFFFFF; border-radius:12px;">
+          <div>C#</div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="imageicons">
+          <img src="https://github.com/ankitvip/Portfolio/blob/main/Portfolio/sql-server.png?raw=true" alt="SQL Server" style="width:48px; border:3px solid #FFFFFF; border-radius:12px;">
+          <div>SQL Server</div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="imageicons">
+          <img src="img/skills/html.png" alt="HTML5" style="width:48px;border:3px solid #FFFFFF; border-radius:12px;">
+          <div>HTML5</div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="imageicons">
+          <img src="img/skills/css.png" alt="CSS3" style="width:48px;border:3px solid #FFFFFF; border-radius:12px;">
+          <div>CSS3</div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="imageicons">
+          <img src="img/skills/javascript.png" alt="JavaScript" style="width:48px;border:3px solid #FFFFFF; border-radius:12px;">
+          <div>JavaScript</div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="imageicons">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/a/a7/React-icon.svg" alt="ReactJS" style="width:48px;border:3px solid #FFFFFF; border-radius:12px;">
+          <div>ReactJS</div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="imageicons">
+           <img src="https://img.icons8.com/color/48/000000/angularjs.png" alt="Angular" style="width:48px;border:3px solid #FFFFFF; border-radius:12px;">
+          <div>Angular</div>
+        </div>
+      </div>
 
-    <section>
-      <div class="container" id="projects" data-aos="fade-down">
-        <h1 class="vline">&nbsp; Projects</h1>
-        <div class="project">
-          <div class="row">
-            <div class="col-md-4">
-              <a href="#">
-                <div class="card">
-                  <div class="card-body card_width_ad">
-                    <h5 class="card-title">HUM mobile Application API</h5>
-                    <p class="card-text text-justify">This project is carefully designed to ﬁt with the rapid technical support for Asp.Net Core,
-			                                          C#, MSSQL, Firebase Cloud Messaging (FCM).using API documentation and testing(Postman).
-                                                Used Database first approach with entity framework to generate models and the dB context.
-                                                Used DB context to access data from the database.Developed scalable modular software Packages for APIs
-                                                Authentication and authorization methods (JWT Token).Using server SFTP and FTP Upload and download data in wwwroot directory.
-                                                using method Requests and response Encryption or Decryption in Api's.Implemented Firebase Cloud Messaging (FCM) API for real-time push notifications 
-			                                          for a Spring Boot-based mobile application
-                    </p>
-                  </div>
-                </div>
-              </a>
+<div class="col">
+  <div class="imageicons text-center">
+    <img src="img/skills/mysql.png" alt="MySQL" style="width:50px; border:3px solid #FFFFFF; border-radius:12px;">
+    <div>MySQL</div>
+  </div>
+</div>
+
+ 
+
+      <div class="col">
+        <div class="imageicons">
+          <img src="https://img.icons8.com/ios-filled/50/000000/github.png" alt="GitHub" style="width:48px;border:3px solid #FFFFFF; border-radius:12px;">
+          <div>Git</div>
+        </div>
+      </div>
+      <div class="col">
+         <div class="imageicons text-center">
+         <img src="https://img.icons8.com/color/48/000000/firebase.png" alt="Firebase" style="width:48px;border:3px solid #FFFFFF; border-radius:12px;">
+         <div>Google Firebase</div>
+       </div>
+      </div>
+
+       <div class="col">
+          <div class="imageicons text-center">
+          <div><strong style="font-size:3.5em;border:3px solid #FFFFFF; border-radius:12px;">IIS Server</strong></div>
+      </div>
+    </div>
+
+      <div class="col">
+         <div class="imageicons text-center">
+         <img src="https://img.icons8.com/color/48/000000/amazon-web-services.png" alt="AWS" style="width:48px;border:3px solid #FFFFFF; border-radius:12px;">
+      <div>AWS</div>
+      </div>
+     </div>
+
+      <div class="col">
+        <div class="imageicons">
+          <img src="https://img.icons8.com/color/48/000000/python--v1.png" alt="Python" style="width:48px;border:3px solid #FFFFFF; border-radius:12px; ">
+          <div>Python</div>
+        </div>
+      </div>
+
+       
+      <div class="col">
+        <div class="imageicons">
+          <img src="img/skills/c.png" alt="C" style="width:48px;border:3px solid #FFFFFF; border-radius:12px;">
+          <div>C</div>
+        </div>
+      </div>
+      <!-- Add more skills as needed -->
+    </div>
+  </div>
+</section>
+<!-- ==== /Skills Section ==== -->
+
+
+ 
+
+
+
+
+    <!-- ==== Projects Section ==== -->
+<section>
+  <div class="container" id="projects" data-aos="fade-down">
+    <h1 class="vline">&nbsp; Projects</h1>
+    <div class="project">
+      <div class="row g-4">
+
+        <!-- Torrent Power DMS Application -->
+        <div class="col-md-4">
+          <div class="card h-100">
+            <div class="card-body card_width_ad">
+              <h5 class="card-title">Torrent Power DMS Application</h5>
+              <p>
+                <strong>Organization:</strong> Torrent Power (Gurgaon, Haryana: Offsite)<br>
+                <strong>Duration:</strong> Jan 2025 – Mar 2025 (Full Time)
+              </p>
+              <ul>
+                <li>Completed audit changes</li>
+                <li>Implemented fast data retrieval processes</li>
+                <li>UI changes & report dashboard creation</li>
+                <li>Trigger process implementation</li>
+                <li>API modification and new API creation</li>
+                <li>Stored procedure modification and creation</li>
+              </ul>
             </div>
-		         <div class="col-md-4">
-              <a href="#">
-                <div class="card">
-                  <div class="card-body card_width_ad">
-                    <h5 class="card-title">HDFC TERM LIFE API</h5>
-                    <p class="card-text text-justify">
-                                        Responsibilities: - Developing/integrating API and application for in-house users and clients Technology used: C#, ASP.net Mvc, MSSQL.
-                                        This project is carefully designed to fit with the rapid technical support for Asp.Net Mvc, C#, MSSQL.
-                                        API documentation and testing (Postman).
-                                        Used Database first approach with entity framework 
-			                                  to generate models and the dB context.
-                                        Used DB context to access data from the database.
-                                        Developed scalable modular software Packages for APIs
-                                        Authentication and authorization methods (JWT Token)
-                                        using method Requests and response Encryption or Decryption in Api's
-                    </p>
-                  </div>
-                </div>
-              </a>
-            </div>		  
-            <div class="col-md-4">
-              <a href="#">
-                <div class="card">
-                  <div class="card-body card_width_ad">
-                    <h5 class="card-title">Class  Performance Analyzer</h5>
-                    <p class="card-text text-justify">
-                                          This project tries to bridge this gap between students and teachers by listing out such students on the basis of marks.
-						                              Class performance analyzer is carefully designed to fit with the rapid technical support for Front-End Language  HTML,CSS,
-						                              JavaScript,Back-End Language:Python, Database used:Sqlite3
-                    </p>
-                  </div>
-                </div>
-              </a>
-            </div>
-            <div class="col-md-4">
-              <a href="#">
-                <div class="card">
-                  <div class="card-body card_width_ad">
-                    <h5 class="card-title">Notepad</h5>
-                    <p class="card-text text-justify">
-                                        Simple text editor for Microsoft Windows.
-					                              Basic text-editing program that allows you to create, 
-					                              open, and read plain text files. Its based on python and 
-					                              i am using module tkinter, os, webbrowser, speech recognition , login as log
-                    </p>
-                  </div>
-                </div>
-              </a>
-            </div>
-            <div class="col-md-4">
-              <a href="#">
-                <div class="card">
-		              <div class="card-body card_width_ad">
-                    <h5 class="card-title"> Electronic Voting System</h5>
-                    <p class="card-text text-justify">
-                                        The project E-Voting System is based on database and object- oriented techniques.
-					                              This system would provide ballot displays on a screen instead of paper. 
-					                               Voters can easily cast their vote by simply clicking on a button.
-                    </p>
-                    </div>
-                </div>
-              </a>
           </div>
         </div>
+
+        <!-- MediAssist DMS Application -->
+        <div class="col-md-4">
+          <div class="card h-100">
+            <div class="card-body card_width_ad">
+              <h5 class="card-title">MediAssist DMS Application</h5>
+              <p>
+                <strong>Organization:</strong> Medi Assist (Gurgaon, Haryana: Offsite)<br>
+                <strong>Duration:</strong> Jan 2025 – Mar 2025 (Full Time)
+              </p>
+              <ul>
+                <li>Completed audit changes</li>
+                <li>Implemented fast data retrieval processes</li>
+                <li>UI changes & report dashboard creation</li>
+                <li>Trigger process implementation</li>
+                <li>API modification and new API creation</li>
+                <li>Stored procedure modification and creation</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <!-- Airtel Payments Bank DMS Application -->
+        <div class="col-md-4">
+          <div class="card h-100">
+            <div class="card-body card_width_ad">
+              <h5 class="card-title">Airtel Payments Bank DMS Application</h5>
+              <p>
+                <strong>Organization:</strong> Airtel Payments Bank (Gurgaon, Haryana: Offsite)<br>
+                <strong>Duration:</strong> Oct 2024 (Full Time)<br>
+                <strong>Role:</strong> Full-Stack Developer
+              </p>
+              <strong>Technologies:</strong> Angular, ASP.NET Core, SQL Server, AES Encryption<br>
+              <ul>
+                <li>Developed OTP-based login, role-based UI enhancements</li>
+                <li>APIs for admin: FTP/Email config, user activation</li>
+                <li>Encrypted user credentials in database</li>
+                <li>Responsive UI and admin operations</li>
+              </ul>
+              <strong>Skills:</strong> Angular, HTML, CSS, JavaScript, ASP.NET Core, C#, SQL Server, Entity Framework, JWT Authentication, Postman, Firebase, SFTP/FTP
+            </div>
+          </div>
+        </div>
+
+        <!-- HUM Mobile Application API -->
+        <div class="col-md-4">
+          <div class="card h-100">
+            <div class="card-body card_width_ad">
+              <h5 class="card-title">HUM Mobile Application API</h5>
+              <p>
+                <strong>Organization:</strong> Softage Information Technology (Gurgaon, Haryana: Offsite)<br>
+                <strong>Duration:</strong> Jul 2023 – Present (Full Time)
+              </p>
+              <strong>Technologies:</strong> ASP.NET Core, C#, MSSQL, FCM, ReactJS<br>
+              <ul>
+                <li>API development/integration for in-house and clients</li>
+                <li>ICICI Bank payment withdrawal API integration</li>
+                <li>Database-first with Entity Framework</li>
+                <li>JWT authentication & scalable module packages</li>
+                <li>SFTP upload/download, admin dashboard, FCM push</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <!-- Document ScanE Project -->
+        <div class="col-md-4">
+          <div class="card h-100">
+            <div class="card-body card_width_ad">
+              <h5 class="card-title">Document ScanE Project</h5>
+              <p>
+                <strong>Clients:</strong> TataPower, Konica, MRPL, L&T, Garhwali, Torrentpower, ICAI, Agile, Hospet, NTPC, Indigo<br>
+                <strong>Location:</strong> Gurgaon, Haryana (Offsite)<br>
+                <strong>Duration:</strong> Jul 2023 – Present (Full Time)
+              </p>
+              <ul>
+                <li>Desktop app for document scanning and field-value indexing</li>
+                <li>Database & FTP server storage</li>
+                <li>C# Windows Forms, DPI and PDF compression</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <!-- PNB Term Life API -->
+        <div class="col-md-4">
+          <div class="card h-100">
+            <div class="card-body card_width_ad">
+              <h5 class="card-title">PNB Term Life API</h5>
+              <p>
+                <strong>Organization:</strong> SMC Insurance Brokers, Noida (Offsite)<br>
+                <strong>Duration:</strong> May 2023 – Jun 2023 (Full Time)
+              </p>
+              <strong>Technologies:</strong> ASP.NET MVC, C#, MSSQL<br>
+              <ul>
+                <li>API/app development/integration for users/clients</li>
+                <li>EF Database-First, TempData, ViewData, ViewBag</li>
+                <li>JWT authentication, Postman docs/testing</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <!-- HDFC Term Life API -->
+        <div class="col-md-4">
+          <div class="card h-100">
+            <div class="card-body card_width_ad">
+              <h5 class="card-title">HDFC Term Life API</h5>
+              <p>
+                <strong>Organization:</strong> SMC Insurance Brokers, Noida (Offsite)<br>
+                <strong>Duration:</strong> Dec 2022 – Mar 2023 (Full Time)
+              </p>
+              <strong>Technologies:</strong> ASP.NET MVC, C#, MSSQL<br>
+              <ul>
+                <li>API/app development for users & clients</li>
+                <li>EF Database-First model/context</li>
+                <li>JWT authentication, modular API creation</li>
+                <li>Postman API documentation and testing</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <!-- TATA & MAX Term Life APIs -->
+        <div class="col-md-4">
+          <div class="card h-100">
+            <div class="card-body card_width_ad">
+              <h5 class="card-title">TATA & MAX Term Life APIs</h5>
+              <p>
+                <strong>Organization:</strong> SMC Insurance, Noida (Offsite)<br>
+                <strong>Duration:</strong> Aug 2022 – Jun 2023 (Full Time)
+              </p>
+              <strong>Technologies:</strong> ASP.NET MVC, C#, MSSQL<br>
+              <ul>
+                <li>API/app development for in-house & client use</li>
+                <li>EF Database-First model/context</li>
+                <li>Postman API docs/testing, JWT authentication</li>
+                <li>BuildDesk payment gateway integration (TATA)</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <!-- Add more projects as needed -->
       </div>
-      </div>
-    </section>
+    </div>
+  </div>
+</section>
+<!-- ==== /Projects Section ==== -->
 
     <section>
       <div class="container" id="contact">
