--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
         <h1 class="display-1">Ankit <span>Sharma</span></h1>
         <h6>I build things for the Sr. Software developer.</h6>
 		<div class="card-body">
-          <p class="card-text">
-            I build <strong>powerful, scalable, and user-focused software solutions.</strong><br><br>
-            I’m a <strong>Sr. Software Developer & Programmer</strong> based in 
-           <strong>South Delhi , Delhi, India</strong>, specializing in full-stack web and desktop application development.<br><br>
-           My passion lies in building efficient, clean, and modern applications using technologies like 
-           <strong>.NET Core,.NET MVC, C#, AngularJS, ReactJS, and SQL Server,MYSQL,AWS</strong>. 
-           If you have a project or creative idea that I can help with, please get in touch.
-         </p>
-       </div>
+         <div class="card-body">
+  <p class="card-text">
+    I BUILD <strong>POWERFUL, SCALABLE, AND USER-FOCUSED SOFTWARE SOLUTIONS.</strong><br><br>
+    I'M A SR. SOFTWARE DEVELOPER & PROGRAMMER LIVING IN SULTANPUR SOUTH DELHI, INDIA, SPECIALIZING IN FULL-STACK WEB AND DESKTOP APPLICATION DEVELOPMENT.<br><br>
+    MY PASSION LIES IN BUILDING EFFICIENT, CLEAN, AND MODERN APPLICATIONS USING TECHNOLOGIES LIKE 
+    <strong>.NET CORE, C#, ANGULAR, REACTJS, AND SQL SERVER</strong>. IF YOU HAVE A PROJECT OR CREATIVE NEED THAT I CAN HELP WITH, PLEASE GET IN TOUCH.
+  </p>
+</div>
+
 
 
         
